fnserver_vs_canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fnserver-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fnserver-route
spec:
  hosts:
  - '*'
  gateways:
  - fnserver-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /r/devops/helloworld-cob/v2
    route:
    - destination:
        host: fnserver.swarm.svc.cluster.local
        port:
            number: 8080
  - match:
    - headers:
        cookies:
          regex: "^(.*?;)?(email=[^;]*@some-company-name.com)(;.*)?$"
    - uri:
        prefix: /hello
    rewrite:
      uri: /r/devops/hello-go
    route:
    - destination:
        host: fnserver.swarm.svc.cluster.local
        port:
            number: 8080
    appendHeaders:
        X-Function-Weighted: v1=50,v2=50
